--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,5 +1,13 @@
+FROM golang:alpine AS builder
+
+WORKDIR /go/src/github.com/desafio-docker
+
+COPY main.go .
+
+RUN GOOS=linux go build main.go
+
 FROM scratch
 
-COPY ./golang .
+COPY --from=builder /go/src/github.com/desafio-docker/main .
 
-ENTRYPOINT [ "./golang" ]
+ENTRYPOINT [ "./main" ]
