--- a/node-nginx/Dockerfile
+++ b/node-nginx/Dockerfile
@@ -6,6 +6,13 @@ COPY . .
 
 RUN npm install --production --quiet
 
+RUN apk add --no-cache openssl
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 EXPOSE 8080
 
-CMD ["node","app/server.js"]
+ENTRYPOINT ["node","app/server.js"]
